package org.example;

public class Linter {

    public Linter() {
        //get config
    }


}
